# ec2_terminator

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: constants.rs  ec2_manager.rs  main.rs
