[package]
name = "ec2_terminator"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda_runtime = "0.11.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simple_logger = "5.0.0"
aws-config = "1.5.1"
aws-sdk-ec2 = "1.51.1"
aws-sdk-lambda = "1.32.0"
tokio = { version = "1", features = ["full"] }
